MDEV-8222 "string_field LIKE int_const" returns a wrong result in case of UCS2 MDEV-8257 Erroneous "Impossible where" when mixing decimal comparison and LIKE